--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -68,11 +68,28 @@ Mr. Brownlow is generating a mean profit of $mean with a profit standard deviati
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
 
+```{r}
+teachers <- numeric (1000)
+ for (i in 1:1000){
+   teachers [i] = BrLw(odds=4.38)
+}
+ favstats(teachers)
 
+```
 
+First we conducted tests on the odds with a sample of 40 teachers. Despite numerous iterations, the odds remained unstable, prompting us to expand the sample to 1000 teachers. Following this increase, we reevaluated the odds.
 
+After conducting multiple rounds of testing, we identified the set of odds with a stability factor of 4.39 as the most consistent.
 
-
+```{r}
+# Create a histogram
+hist(teachers, 
+     main = "teachers Histogram",
+     xlab = "teachers",
+     ylab = "Frequency",
+     col = "skyblue",
+     border = "black")
+```
 
 
 # Discussion and Conclusion
