--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -37,6 +37,10 @@ There are 3 questions and there should be at least 3 separate commits, at least 
 The function will be given a class_size by number of students, odds, and Number_of_times brownlow made the bet.  It will give you back how much Brownlows earnings were. We will use it to answer our three questions below. If you can, improve this function by giving default values to some of its inputs. 
 
 # In the class and payoff as described  If you highered 40 brownlow substitute teachers to do the same thing that Brownlow did then.
+## what is their average earnings
+## the standard deviation and a 95% confidence interval for their earnings?
+  
+<!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
 
 ```{r}
 options(digits = 2)
@@ -65,22 +69,7 @@ cat("Mr Brownlow is on average making $",central$mean," over the course of the e
 cat("95% Conficence Interval: Low:$",central$mean - 2*central$sd,"- High $", central$mean + 2*central$sd)
 ```
 
-## what is their average earnings
-## the standard deviation and a 95% confidence interval for their earnings?
-  
-<!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
-
-```{r}
-teachers <- numeric(1000)
-for (i in 1:1000){
-  teachers[i]=BrLw(odds=4.39)
-}
-
-favstats(teachers)
-
-```
-
-Mr. Brownlow is generating a mean profit of $mean with a profit standard deviation of $sd. The 95% confidence interval spans from 225.2167 to 336.4333.
+## Answer:  We can say that Mr. Brownlows is making an average of `r profit$mean` with a standard deviation of `r profit$sd`. 
 
 # What are the fair odds? Use manipulation of odds in the function to tune Brownlows earnings to zero. 
 
