--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -76,29 +76,29 @@ cat("95% Conficence Interval: Low:$",central$mean - 2*central$sd,"- High $", cen
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
+
 ```{r}
-teachers <- numeric (1000)
- for (i in 1:1000){
-   teachers [i] = BrLw(odds=4.38)
+teachers <- numeric(1000)
+for (i in 1:1000){
+  teachers[i]=BrLw(odds=4.39)
 }
- favstats(teachers)
+
+favstats(teachers)
 
 ```
 
 ##First we conducted tests on the odds with a sample of 40 teachers. Despite numerous iterations, the odds remained unstable, prompting us to expand the sample to 1000 teachers. Following this increase, we reevaluated the odds. After conducting multiple rounds of testing, we identified the set of odds with a stability factor of 4.39 as the most consistent.
 
 ```{r}
-q1data <- c()
-iterations = 250
-for (i in 1:iterations) {
-  q1data <- c(q1data, BrLw(odds = 4.4))
-}
-hist(q1data, main = "Histogram of Results", xlab = "Value", col = "red", border = "black", breaks = 15)
+# Create a histogram
+hist(teachers, 
+     main = "teachers Histogram",
+     xlab = "teachers",
+     ylab = "Frequency",
+     col = "skyblue",
+     border = "black")
+
 ```
-
-
-Using trial and error we adjusted the input odds to get the results to mean over 0 as consistantly as possible, there is some natural variation but without overloading the processing power of this system with extremely large sample sizes this 4.4 odds is the best result that we can obtain.
-
 
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
 
